<?xml version="1.0" encoding="utf-8"?>
<!--
    LAYOUT HRY
-->
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/word_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arrow_count"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="3 of 5 arrows" />

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Score: 20" />

            <ImageView
                android:id="@+id/kruh"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/circle2_debug"
                android:contentDescription="@string/rotujuci_sa_kruh" />

            <Button
                android:id="@+id/pal_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:text="@string/pal"
                android:backgroundTint="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/arrow1"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/pal_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/kruh"
                app:srcCompat="@drawable/arrow_2"
                android:contentDescription="@string/sipka_ktora_sa_vystrely_do_kruhu_ako_prva" />

            <ImageView
                android:id="@+id/arrow2"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/pal_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/kruh"
                app:srcCompat="@drawable/arrow_2"
                android:contentDescription="@string/sipka_ktora_sa_vystrely_do_kruhu_ako_druha" />

            <ImageView
                android:id="@+id/arrow3"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/pal_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/kruh"
                app:srcCompat="@drawable/arrow_2"
                android:contentDescription="@string/sipka_ktora_sa_vystrely_do_kruhu_ako_tretia" />

            <ImageView
                android:id="@+id/arrow4"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/pal_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/kruh"
                app:srcCompat="@drawable/arrow_2"
                android:contentDescription="@string/sipka_ktora_sa_vystrely_do_kruhu_ako_stvrta" />

            <ImageView
                android:id="@+id/arrow5"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/pal_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/kruh"
                app:srcCompat="@drawable/arrow_2"
                android:contentDescription="@string/sipka_ktora_sa_vystrely_do_kruhu_ako_piata" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>