<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GameOverFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#3A3A3A">

            <TextView
                android:id="@+id/prehral_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prehral_si"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="50sp"
                app:layout_constraintBottom_toTopOf="@+id/zrus_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/zrus_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hra_sa_zru"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:backgroundTint="@color/youLoseBackground"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/zrus_view" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>